Fix spacing problem on index created by last commit, adjust arrow icon size and placement

--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,7 @@ Layout
 
 .container {
     grid-gap: 7%;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 
