--- a/css/style.css
+++ b/css/style.css
@@ -254,7 +254,7 @@ aside a {
     background-image: url(../images/external_arrow.png);
     background-origin: padding-box;
     background-repeat: no-repeat;
-    background-position: 90% 40%;
+    background-position: 93% 40%;
 }
 
 aside a:hover {
